--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
       <hr>
 
       <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
-      <h2 class="italic">Personal details</h2> <hr>
 
 
 
       <form class="push-0" method="POST" action="https://formspree.io/lyal0007@algonquincollege.com">
-        <div class="unit">
-        <div class="push l-1-2">
+        <fieldset>
+      <legend>Personal Details</legend>
+        </fieldset>
+        <div class="grid">
+        <div class="push unit l-1-2">
           <label for="name">Name</label>
           <input id="name" name="name" required>
         </div>
-        <div class="push l-1-2">
+        <div class="push unit l-1-2">
           <label for="age">Age</label>
-          <input id="age" name="age" required>
+          <input id="number" name="age" required>
         </div>
-        <div class="push l-1-2">
+        <div class="push unit l-1-2">
           <label for="email">Your email</label>
           <input id="email" type="email" name="email" required>
         </div>
-        <div class="push l-1-2">
+        <div class="push unit l-1-2">
           <label for="subject">Physical fitness</label>
           <select id="subject" name="_subject">
             <option>Super-human!</option>
@@ -46,12 +48,14 @@
           </select>
         </div>
         </div>
-        <div class="push">
+        <div class="push unit xs-1">
           <label for="details">Address</label>
           <textarea id="details" name="message" required></textarea>
         </div>
 
-        <h2 class="italic">Mission statement</h2> <hr>
+        <fieldset>
+      <legend>Mission statement</legend>
+        </fieldset>
 
         <div class="push">
           <label for="details">Why do you want to go to Mars?</label>
