--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <section class="cintact gutter-1-2 pad-t-2 pad-b-2">
+  <section class="cintact gutter pad-t-2 pad-b-2">
     <div class="max-length">
       <h1>Want to go to Mars?</h1>
 
@@ -25,19 +25,19 @@
       <legend>Personal details</legend>
         </fieldset>
         <div class="grid">
-        <div class="push unit xs-1 l-1-2">
+        <div class="name push unit xs-1 l-1-2">
           <label for="name">Name</label>
           <input id="name" required>
         </div>
-        <div class="push unit xs-1 l-1-2">
+        <div class="age push unit xs-1 l-1-2">
           <label for="age">Age</label>
           <input id="age" name="age" required>
         </div>
-        <div class="push unit xs-1 l-1-2">
+        <div class="email push unit xs-1 l-1-2">
           <label for="email">Email</label>
           <input id="email" type="email" required>
         </div>
-        <div class="push unit xs-1 l-1-2">
+        <div class="physical push unit xs-1 l-1-2">
           <label for="subject">Physical fitness</label>
           <select id="subject" name="_subject">
             <option>Super-human!</option>
