--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <div class="max-length">
       <h1>Want to go to Mars?</h1>
 
-      <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+      <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
 
 
 
       <form class="push-0" method="POST" action="https://formspree.io/lyal0007@algonquincollege.com">
         <fieldset>
-      <legend>Personal details</legend>
+      <legend class="italic">Personal details</legend>
         </fieldset>
         <div class="grid">
-        <div class="name push unit xs-1 l-1-2">
+        <div class="name push unit xs-1 m-1 l-1-2">
           <label for="name">Name</label>
           <input id="name" required>
         </div>
-        <div class="age push unit xs-1 l-1-2">
+        <div class="age push unit xs-1 m-1 l-1-2">
           <label for="age">Age</label>
           <input id="age" name="age" required>
         </div>
-        <div class="email push unit xs-1 l-1-2">
+        <div class="email push unit xs-1 m-1 l-1-2">
           <label for="email">Email</label>
           <input id="email" type="email" required>
         </div>
-        <div class="physical push unit xs-1 l-1-2">
+        <div class="physical push unit xs-1 m-1 l-1-2">
           <label for="subject">Physical fitness</label>
           <select id="subject" name="_subject">
             <option>Super-human!</option>
@@ -53,7 +53,7 @@
         </div>
 
         <fieldset>
-      <legend>Mission statement</legend>
+      <legend class="italic">Mission statement</legend>
         </fieldset>
 
         <div class="push">
