Fix the indentation

--- a/index.html
+++ b/index.html
@@ -18,34 +18,32 @@
 
       <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
 
-
-
       <form class="push-0" method="POST" action="https://formspree.io/lyal0007@algonquincollege.com">
-        <fieldset>
-      <legend class="italic">Personal details</legend>
+        <fieldset class="push-0">
+          <legend class="italic giga push-0">Personal details</legend>
         </fieldset>
         <div class="grid">
-        <div class="name push unit xs-1 m-1 l-1-2">
-          <label for="name">Name</label>
-          <input id="name" required>
-        </div>
-        <div class="age push unit xs-1 m-1 l-1-2">
-          <label for="age">Age</label>
-          <input id="age" name="age" required>
-        </div>
-        <div class="email push unit xs-1 m-1 l-1-2">
-          <label for="email">Email</label>
-          <input id="email" type="email" required>
-        </div>
-        <div class="physical push unit xs-1 m-1 l-1-2">
-          <label for="subject">Physical fitness</label>
-          <select id="subject" name="_subject">
-            <option>Super-human!</option>
-            <option>Fit as a fiddle</option>
-            <option>Not terribly strong</option>
-            <option>A little couch-potato-y</option>
-          </select>
-        </div>
+          <div class="name push unit xs-1 m-1 l-1-2">
+            <label for="name">Name</label>
+            <input id="name" required>
+          </div>
+          <div class="age push unit xs-1 m-1 l-1-2">
+            <label for="age">Age</label>
+            <input id="age" name="age" required>
+          </div>
+          <div class="email push unit xs-1 m-1 l-1-2">
+            <label for="email">Email</label>
+            <input id="email" type="email" required>
+          </div>
+          <div class="physical push unit xs-1 m-1 l-1-2">
+            <label for="subject">Physical fitness</label>
+            <select id="subject" name="_subject">
+              <option>Super-human!</option>
+              <option>Fit as a fiddle</option>
+              <option>Not terribly strong</option>
+              <option>A little couch-potato-y</option>
+            </select>
+          </div>
         </div>
         <div class="push unit xs-1">
           <label for="address">Address</label>
@@ -53,7 +51,7 @@
         </div>
 
         <fieldset>
-      <legend class="italic">Mission statement</legend>
+          <legend class="italic giga">Mission statement</legend>
         </fieldset>
 
         <div class="push">
